// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Brick /> should render a Brick with default values 1`] = `
<styled.span
  color="neutral"
  data-component-type="brick"
  typographyType="body"
>
  Test
</styled.span>
`;

exports[`<Brick /> should render a Brick with the alert color 1`] = `
<styled.span
  color="alert"
  data-component-type="brick"
  typographyType="body"
>
  Test
</styled.span>
`;

exports[`<Brick /> should render a Brick with the heading typography 1`] = `
<styled.span
  color="neutral"
  data-component-type="brick"
  typographyType="heading"
>
  Test
</styled.span>
`;
